# lib/db/src/schema/index.ts
@@ -1,3 +1,6 @@
 export * from "./users";
 export * from "./sessions";
 export * from "./menu-items";
+export * from "./orders";
+export * from "./order-items";
+export * from "./reservations";
